feat: 大规模性能优化 + SOLID重构 + Native Image兼容 + SVG图标系统 + CI
性能优化:
- SIFT训练阶段重叠分块特征提取，大图训练峰值内存降低40%+
- 全帧截帧预览堆内存爆炸修复 — 三处 humongous 分配池化 + Socket缓冲复用
- Canvas 渲染管线重构 — GPU平移、视口裁剪、瓦片优化
- Material Ripple 全按钮覆盖

架构重构:
- ModernCanvasApp SOLID拆解 — 提取6个service类
- SettingsStage SOLID拆分 + SvgManager DOM解析
- 合并三个独立Renderer到MapRenderer统一管线
- ThemeManager/WindowManager移至service包

Native Image兼容性:
- var→显式类型声明 + 全限定名→import
- reachability-metadata.json补充反射/JNI类型
- 首次启动流程修复 — 下载取消、initFile时序、按钮颜色

SVG图标系统:
- 多色SVG保留原始fill属性
- 14个新图标 + rmt.svg重绘
- hover画线动画 — 填充色描边勾勒 + CSS主题色解析

其他:
- 玩家拾取光环 + 资源变灰修复 + 窗口尺寸锁定
- 配置热加载 + 设置面板重构 + ROI截帧预览
- 路线管理工具样式跟随主题
- GitHub Actions CI工作流